[package]
name = "ingn"
version = "0.1.0"
authors = ["Ivan Shikhalev <shikhalev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0.*"
serde_json = "1.0.*"
serde_derive="1.0.*"
serde-aux = "0.6.*"
actix-web = "2.0.*"
actix-files = "0.2.*"
actix-rt = "1.0.*"
actix-service = "1.0.*"
image="0.23.*"

[dev-dependencies]
more-asserts = "0.2.*"

[[test]]
name = "all_tests"
path = "src/tests/all.rs"