[package]
name = "ingn"
version = "0.1.0"
authors = ["Ivan Shikhalev <shikhalev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_urlencoded = "*"
actix-web = "*"
actix-rt = "*"
actix-service = "*"
image = "*"
chrono = { version="*", features = ["serde"] }
futures = "*"
bytes = "*"

[dev-dependencies]
more-asserts = "*"

[[test]]
name = "all_tests"
path = "src/tests/all.rs"